--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3
   firebase_auth: ^4.19.5
+  qr_flutter: ^4.1.0
+  screenshot: ^2.5.0
+  permission_handler: ^11.3.1
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
