--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   screenshot: ^2.5.0
   permission_handler: ^11.3.1
   image_gallery_saver: ^2.0.3
+  image_picker: ^1.1.1
+  # flutter_sms: ^2.3.3
+  flutter_local_notifications: ^17.1.2
+  qr_bar_code_scanner_dialog: ^0.0.5
 
 dev_dependencies:
   flutter_test:
