--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,14 +87,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: MyFont1
+       fonts:
+         - asset: fonts/Poppins-Regular.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
+     - family: MyFont2
+       fonts:
+          - asset: fonts/superchunky.ttf
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
