ui: updated ui on intro and signin/signup pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
      - family: MyFont1
        fonts:
          - asset: fonts/Poppins-Regular.ttf
+
   #         style: italic
      - family: MyFont2
        fonts:
@@ -99,6 +100,14 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+
+     - family: MyFont3
+       fonts:
+          - asset: fonts/Poppins-Bold.ttf
+
+
+
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
