chore: installed AutoSizeText to handle text overflow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   qr_code_scanner: ^1.0.1
   telephony: ^0.2.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
